--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,11 @@
-<app-board></app-board>
-<app-scores></app-scores>
-<app-feedback></app-feedback>
+<div>
+
+</div>
+<div>
+  <app-board></app-board>
+</div>
+<div>
+  <app-scores></app-scores>
+  <app-feedback></app-feedback>
+</div>
+
