feat(components): Board with icons and borders

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,15 +1,16 @@
-<div class="grid grid-cols-4 gap-4">
+<div class="grid grid-cols-4 gap-4 place-items-center">
 
-  <div class="grid grid-cols-subgrid gap-4 col-span-4"></div>
+  <div class="grid grid-cols-subgrid gap-4 col-span-4 my-6"></div>
 
   <div>
     <app-leftpane></app-leftpane>
   </div>
-  <div class="grid grid-cols-subgrid gap-4 col-span-2">
+  <div class="grid gap-4 col-span-2 place-items-center">
     <app-board></app-board>
   </div>
   <div>
     <app-scores></app-scores>
     <app-feedback></app-feedback>
   </div>
+
 </div>
