--- a/src/app/components/leftpane/leftpane.component.html
+++ b/src/app/components/leftpane/leftpane.component.html
@@ -1,9 +1,12 @@
 <div>
-  <p>First to play:</p>
-  <p (click)="firstToPlayNoughts()">Noughts</p>
-  <p (click)="firstToPlayCross()">Cross</p>
+  <p class="">First to play:</p>
+
+  <span (click)="firstToPlayNoughts()" class="mr-4">Noughts</span>
+  <span (click)="firstToPlayCross()" class="mr-4">Cross</span>
 </div>
 
-<div (click)="restart()">
+<div class="mt-4"></div>
+
+<div (click)="restart()" class="">
   Restart
 </div>
