style(components): Scores table

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,15 +1,16 @@
-<div class="grid grid-cols-4 gap-4 place-items-center">
+<div class="grid grid-cols-4 gap-4">
 
   <div class="grid grid-cols-subgrid gap-4 col-span-4 my-6"></div>
 
-  <div>
+  <div class="justify-items-end">
     <app-leftpane></app-leftpane>
   </div>
-  <div class="grid gap-4 col-span-2 place-items-center">
+  <div class="grid gap-4 col-span-2 justify-items-center">
     <app-board></app-board>
   </div>
-  <div>
+  <div class="justify-items-start">
     <app-scores></app-scores>
+    <div class="mt-8"></div>
     <app-feedback></app-feedback>
   </div>
 
