--- a/src/app/components/leftpane/leftpane.component.html
+++ b/src/app/components/leftpane/leftpane.component.html
@@ -1,12 +1,12 @@
 <div>
-  <p class="">First to play:</p>
+  <p class="mr-4 text-right">Who starts first?</p>
 
-  <span (click)="firstToPlayNoughts()" class="mr-4">Noughts</span>
-  <span (click)="firstToPlayCross()" class="mr-4">Cross</span>
+  <p (click)="firstToPlayNoughts()" class="mr-4 text-right">Noughts</p>
+  <p (click)="firstToPlayCross()" class="mr-4 text-right">Cross</p>
 </div>
 
 <div class="mt-4"></div>
 
-<div (click)="restart()" class="">
+<div (click)="restart()" class="mr-4 text-right">
   Restart
 </div>
