--- a/src/app/components/scores/scores.component.html
+++ b/src/app/components/scores/scores.component.html
@@ -1,4 +1,16 @@
 <div>
-  <p>{{ pointsNoughts }}</p>
-  <p>{{ pointsCross }}</p>
+  <p>Score</p>
+
+  <br>
+
+  <table>
+    <tr>
+      <td class="pr-4">Noughts</td>
+      <td class="pr-4">{{ pointsNoughts }}</td>
+    </tr>
+    <tr>
+      <td class="pr-4">Cross</td>
+      <td class="pr-4">{{ pointsCross }}</td>
+    </tr>
+  </table>
 </div>
