style: Header and text size

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,14 +1,18 @@
 <div class="grid grid-cols-4 gap-4">
 
+  <div class="grid gap-4 col-span-4 my-6">
+    <h2 class="text-center text-3xl">Tic-Tac-Toe</h2>
+  </div>
+
   <div class="grid grid-cols-subgrid gap-4 col-span-4 my-6"></div>
 
-  <div class="justify-items-end">
+  <div class="justify-items-end text-xl">
     <app-leftpane></app-leftpane>
   </div>
   <div class="grid gap-4 col-span-2 justify-items-center">
     <app-board></app-board>
   </div>
-  <div class="justify-items-start">
+  <div class="justify-items-start text-xl">
     <app-scores></app-scores>
     <div class="mt-8"></div>
     <app-feedback></app-feedback>
