feat: Feedback messages

--- a/src/app/components/leftpane/leftpane.component.html
+++ b/src/app/components/leftpane/leftpane.component.html
@@ -1,12 +1,12 @@
 <div>
   <p class="mr-4 text-right">Who starts first?</p>
 
-  <p (click)="firstToPlayNoughts()" class="mr-4 text-right">Noughts</p>
-  <p (click)="firstToPlayCross()" class="mr-4 text-right">Cross</p>
+  <p (click)="firstToPlayNoughts()" class="mr-4 text-right cursor-pointer">Noughts</p>
+  <p (click)="firstToPlayCross()" class="mr-4 text-right cursor-pointer">Cross</p>
 </div>
 
 <div class="mt-4"></div>
 
-<div (click)="restart()" class="mr-4 text-right">
+<div (click)="restart()" class="mr-4 text-right cursor-pointer">
   Restart
 </div>
