style: Cursor crosshair

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -9,7 +9,7 @@
   <div class="justify-items-end text-xl">
     <app-leftpane></app-leftpane>
   </div>
-  <div class="grid gap-4 col-span-2 justify-items-center cursor-crosshair">
+  <div class="grid gap-4 col-span-2 justify-items-center">
     <app-board></app-board>
   </div>
   <div class="justify-items-start text-xl">
