--- a/src/app/components/scores/scores.component.html
+++ b/src/app/components/scores/scores.component.html
@@ -1,16 +1,14 @@
 <div>
-  <p>Score</p>
-
-  <br>
+  <p class="mb-6 font-semibold">Score</p>
 
   <table>
     <tr>
-      <td class="pr-4">Noughts</td>
-      <td class="pr-4">{{ pointsNoughts }}</td>
+      <td>Noughts</td>
+      <td class="pl-6">{{ pointsNoughts }}</td>
     </tr>
     <tr>
-      <td class="pr-4">Cross</td>
-      <td class="pr-4">{{ pointsCross }}</td>
+      <td>Cross</td>
+      <td class="pl-6">{{ pointsCross }}</td>
     </tr>
   </table>
 </div>
