--- a/src/app/components/leftpane/leftpane.component.html
+++ b/src/app/components/leftpane/leftpane.component.html
@@ -1,12 +1,9 @@
 <div>
-  <p class="mr-4 text-right">Who starts first?</p>
-
-  <p (click)="firstToPlayNoughts()" class="mr-4 text-right cursor-pointer">Noughts</p>
-  <p (click)="firstToPlayCross()" class="mr-4 text-right cursor-pointer">Cross</p>
+  <p class="font-semibold">Who starts first?</p>
+  <p (click)="firstToPlayNoughts()" class="cursor-pointer">Noughts</p>
+  <p (click)="firstToPlayCross()" class="cursor-pointer">Cross</p>
 </div>
 
-<div class="mt-4"></div>
-
-<div (click)="restart()" class="mr-4 text-right cursor-pointer">
+<div (click)="restart()" class="mt-6 cursor-pointer">
   Restart
 </div>
