style: Text XL default

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,7 +2,7 @@
     <h2 class="title text-3xl">Tic-Tac-Toe</h2>
 </div>
 
-<div class="centered-content select-none text-lg" style="padding-top: 0">
+<div class="centered-content select-none text-xl" style="padding-top: 0">
   <div class="left-pane">
     <app-leftpane></app-leftpane>
   </div>
