--- a/src/app/components/scores/scores.component.html
+++ b/src/app/components/scores/scores.component.html
@@ -1,14 +1,14 @@
 <div>
-  <p class="mb-6 font-semibold">Score</p>
+  <p id="score">Score</p>
 
   <table>
     <tr>
       <td>Noughts</td>
-      <td class="pl-6">{{ pointsNoughts }}</td>
+      <td class="points">{{ pointsNoughts }}</td>
     </tr>
     <tr>
       <td>Cross</td>
-      <td class="pl-6">{{ pointsCross }}</td>
+      <td class="points">{{ pointsCross }}</td>
     </tr>
   </table>
 </div>
