--- a/src/app/components/leftpane/leftpane.component.css
+++ b/src/app/components/leftpane/leftpane.component.css
@@ -2,7 +2,7 @@
   @apply p-1;
 }
 
-@media screen and (orientation: portrait) {
+@media screen and (orientation: portrait), screen and (orientation: landscape) and (max-width: 768px) {
   .start-first p {
     @apply p-2;
   }
