--- a/src/app/components/board/board.component.html
+++ b/src/app/components/board/board.component.html
@@ -1,5 +1,5 @@
 <table class="table">
-  <tr *ngFor="let row of board; let r = index">
+  <tr *ngFor="let row of (board | async); let r = index">
     <td *ngFor="let elem of row; let c = index" (click)="play(r, c)">
       <div *ngIf="elem == 0"></div>
       <img *ngIf="elem == 1" src="./assets/Noughts.png" />
