refactor: First to play reactive

--- a/src/app/components/leftpane/leftpane.component.html
+++ b/src/app/components/leftpane/leftpane.component.html
@@ -1,9 +1,9 @@
 <div class="start-first">
   <p class="font-semibold">Who starts first?</p>
   <p (click)="firstToPlayNoughts()" class="cursor-pointer"
-     [ngClass]="{'font-semibold': this.startGameWith == 0}">Noughts</p>
+     [ngClass]="{'font-semibold': (this.firstToPlay | async) == 0}">Noughts</p>
   <p (click)="firstToPlayCross()" class="cursor-pointer"
-     [ngClass]="{'font-semibold': this.startGameWith == 1}">Cross</p>
+     [ngClass]="{'font-semibold': (this.firstToPlay | async) == 1}">Cross</p>
 </div>
 
 <div (click)="restart()" class="restart mt-6 cursor-pointer">
